@@ -1,1 +1,3 @@
 # Johannesburg Bean Exchange
+
+jlink --module-path "C:\Program Files\Java\jdk-21\jmods" --add-modules java.base,java.net.http --output jre
